# CasterAgent

./: .gitignore  README.md  main.py  pyproject.toml
config/: hedra.json
src/ai_daily2video/: app.py
src/ai_daily2video/application/services/: pipeline_service.py
src/ai_daily2video/application/use_cases/: generate_daily_video.py
src/ai_daily2video/core/: openai_client.py
src/ai_daily2video/infrastructure/clients/: esa_client.py
src/ai_daily2video/infrastructure/services/: logging_service.py  moviepy_video_composer.py  noop_publisher.py  notifier_service.py  openai_audio_service.py  openai_image_service.py  openai_script_service.py  youtube_publisher.py
src/ai_daily2video/presentation/: api.py
src/daily2video/application/services/: pipeline_service.py
src/daily2video/application/use_cases/: generate_daily_video.py
src/daily2video/core/: settings.py
src/daily2video/domain/: interfaces.py  models.py
src/daily2video/infrastructure/clients/: esa_client.py  hedra_client.py
src/daily2video/infrastructure/services/: hedra_video_composer.py  moviepy_video_composer.py  openai_audio_service.py  openai_image_service.py  openai_script_service.py  openai_subtitle_service.py
src/daily2video/presentation/: dependencies.py
tests/: test_generate_daily_video.py  test_hedra_video_composer.py
